Fix overflow issue with Contact link in nav bar

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -69,7 +69,7 @@ header {
     padding-top: 5px;
     text-align: center;
     text-transform: uppercase;
-    font-size: 14px;
+    font-size: 10px;
     letter-spacing: 2px;
 }
 
